<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/first_top_margin_in_activity" >

        <Button
            android:id="@+id/bNewTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bNewTrans"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bNewTransQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bNewTransQR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/top_margin_between_row_in_activity"
        android:paddingTop="@dimen/top_margin_between_row_in_activity" >

        <Button
            android:id="@+id/bHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bHistory" />

        <Button
            android:id="@+id/bOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bOption" />

    </LinearLayout>

    <Button
        android:id="@+id/bSettlement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bSettlement" />
    
    <ProgressBar
        android:id="@+id/pMain"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/top_margin_between_row_in_activity" />

    <TextView
        android:id="@+id/tDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>
